[tool.poetry]
name = "python-refresher-exercises"
version = "0.1.0"
description = "python exercises"
authors = ["Yahya Gilany <yahya.gilany@uc.edu>"]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.25.1"
black = "^23.7.0"
numpy = "^1.25.2"
testbook = "^0.4.2"
pytest = "^7.4.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
